--- a/package.json
+++ b/package.json
@@ -32,26 +32,29 @@
   "author": "Joscha Feth <joscha@feth.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.3.26",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015": "^6.1.18",
-    "chai": "^3.4.1",
-    "coveralls": "^2.11.4",
-    "eslint": "^1.10.2",
-    "eslint-config-airbnb": "^4.0.0",
-    "istanbul": "^0.4.1",
+    "babel-core": "^6.9.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
+    "eslint": "^2.10.2",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.2.2",
+    "eslint-plugin-react": "^5.1.1",
+    "istanbul": "^0.4.3",
     "jsdom": "^9.2.0",
-    "mocha": "^2.3.4",
-    "mocha-lcov-reporter": "^1.0.0",
-    "webpack": "^1.12.10"
+    "mocha": "^2.5.3",
+    "mocha-lcov-reporter": "^1.2.0",
+    "webpack": "^1.13.1"
   },
   "engines": {
     "node": ">=4.2"
   },
   "dependencies": {
     "define-error": "^1.1.0",
-    "js-beautify": "^1.5.10",
-    "object-assign": "^4.0.1"
+    "js-beautify": "^1.6.2",
+    "object-assign": "^4.1.0"
   },
   "tonicExampleFilename": "examples/tonic.js"
 }
